<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FindSodaActivity">
    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_message"
        />
    <Spinner
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcome_message"
        android:layout_marginTop="18dp"
        android:entries="@array/soda_colors"
        />

    <Button
        android:id="@+id/find_soda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/color"
        android:layout_below="@+id/color"
        android:layout_marginTop="10dp"
        android:text="@string/find_beer"
        android:onClick="onClickFindSoda"
        />

    <TextView
        android:id="@+id/brands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/find_soda"
        android:layout_below="@+id/find_soda"
        android:layout_marginTop="18dp"
        android:text="@string/brands"
        />

    <TextView
        android:id="@+id/soda_add_prompt"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/soda_add_prompt"
        />

    <EditText
        android:id="@+id/add_color"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:hint="@string/color_hint"
        android:layout_below=""
        android:inputType="text" />
    <EditText
        android:id="@+id/add_soda"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/soda_hint"
        android:layout_toRightOf="@+id/add_color"
        android:layout_toEndOf="@+id/add_color"
        android:inputType="text" />
</RelativeLayout>